--- a/style.css
+++ b/style.css
@@ -1,4 +1,55 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    font-family: Verdana, sans-serif;
+    font-size: 14px;
+    background-color: #000;
+}
 
+.page-wrapper {
+    display: flex;
+    justify-content: center;
+}
 
+.form-section {
+    margin-top: 40px;
+    background-color: #fff;
+    padding: 10px 40px 10px 20px;
+    border-radius: 30px;
+}
+
+.form-section h1 {
+    color: #808080;
+    font-size: 2.4em;
+    font-weight: bold;
+}
+
+.form-section .form-result-container {
+    margin-left: 80px;
+}
+
+.form-section .form-result-container #output {
+    display: none;
+}
+
+.form-section .form-result-container form fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.form-section .form-result-container form fieldset > * {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.form-section .form-result-container form fieldset > * label {
+    width: 115px;
+}
+
+.form-section .form-result-container form fieldset > * p {
+    margin: 0;
+}
+
+.form-section .form-result-container form fieldset .years-number input {
+    width: 35px;
+}
